if available, display flag instead of lang code

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
           <ul>
             <li data-info-type="title">Title: {{title}}</li>
             <li data-info-type="original-title">Original title: {{originalTitle}}</li>
+            <li data-info-type="lang-flag"><img src="flags/flag_{{flag}}.png"></li>
             <li data-info-type="language">Language: {{language}}</li>
             <li data-info-type="vote">
               <i class="far fa-star"></i>
@@ -70,11 +71,7 @@
       </script>
 
       <script id="stars-template" type="text/x-handlebars-template">
-        <i class="{{starClass1}} fa-star"></i>
-        <i class="{{starClass2}} fa-star"></i>
-        <i class="{{starClass3}} fa-star"></i>
-        <i class="{{starClass4}} fa-star"></i>
-        <i class="{{starClass5}} fa-star"></i>
+        <img src="pics/{{flag}}.png">
       </script>
     </main>
   </body>
