get results for both movies and tv shows

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <ul>
             <li data-info-type="title">Title: {{title}}</li>
             <li data-info-type="original-title">Original title: {{originalTitle}}</li>
-            <li data-info-type="lang-flag"><img src="flags/flag_{{flag}}.png"></li>
+            <li data-info-type="lang-flag"><img src="flags/flag_{{language}}.png"></li>
             <li data-info-type="language">Language: {{language}}</li>
             <li data-info-type="vote">
               <i class="far fa-star"></i>
@@ -70,9 +70,6 @@
         </div>
       </script>
 
-      <script id="stars-template" type="text/x-handlebars-template">
-        <img src="pics/{{flag}}.png">
-      </script>
     </main>
   </body>
 </html>
