--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- HEADER -->
     <header>
       <div class="container">
-        <div class="header-left">
+        <div class="header-left float-lx">
           <a id="logo-ref" href="https://fontmeme.com/netflix-font/"><img src="https://fontmeme.com/permalink/200522/c2afbefb193becb208cc4f7dcf0a14da.png" alt="netflix-font" border="0"></a>
           <ul>
             <li>Home</li>
@@ -25,7 +25,7 @@
             <li>My List</li>
           </ul>
         </div>
-        <div class="header-right">
+        <div class="header-right float-rx">
           <!-- <div class="primary-search">
             <i class="fas fa-search"></i>
             <input class="searchbar" type="text" placeholder="Titles, people, genres">
@@ -42,18 +42,30 @@
         </div>
       </div>
     </header>
-    <!-- HEADER END -->
 
+    <!-- MAIN -->
     <main>
       <div class="container">
+        <div class="results-display-header clearfix">
+          <div class="results-display-header-left float-lx">
+            <p>Explore titles related to:</p>
+          </div>
+          <div class="results-display-header-right float-rx">
+            <a href="#">Related Search 1</a>
+            <a href="#">Related Search 2</a>
+            <a href="#">Related Search 3</a>
+          </div>
+        </div>
         <div id="results-display">
 
         </div>
       </div>
+    </main>
 
       <!-- HANDLEBARS TEMPLATES -->
       <script id="list-template" type="text/x-handlebars-template">
-        <div class="movie-card">
+        <div class="item-card">
+          <img src="{{poster}}" alt="">
           <ul>
             <li data-info-type="title">Title: {{title}}</li>
             <li data-info-type="original-title">Original title: {{originalTitle}}</li>
@@ -69,7 +81,5 @@
           </ul>
         </div>
       </script>
-
-    </main>
   </body>
 </html>
