--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
       <!-- HANDLEBARS TEMPLATES -->
       <script id="list-template" type="text/x-handlebars-template">
         <div class="item-card">
-          <img src="{{poster}}" alt="">
-          <ul>
-            <li data-info-type="title">Title: {{title}}</li>
-            <li data-info-type="original-title">Original title: {{originalTitle}}</li>
+          <img class="item-card-img" src="{{poster}}" alt="">
+          <ul class="item-card-info">
+            <li data-info-type="title">{{title}}</li>
+            <li data-info-type="original-title">{{originalTitle}}</li>
             <li data-info-type="lang-flag"><img src="flags/flag_{{language}}.png"></li>
             <li data-info-type="language">Language: {{language}}</li>
             <li data-info-type="vote">
@@ -78,6 +78,7 @@
               <i class="far fa-star"></i>
               <i class="far fa-star"></i>
             </li>
+            <li data-info-type="overview">{{synopsis}}</li>
           </ul>
         </div>
       </script>
