code optimization + ja, us/uk flag

--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
       <!-- HANDLEBARS TEMPLATES -->
       <script id="list-template" type="text/x-handlebars-template">
         <div class="item-card">
-          <img class="item-card-img" src="{{poster}}" alt="">
+          <img class="item-card-img active" src="{{poster}}" alt="">
+          <p class="item-card-title active">{{title}}</p>
           <ul class="item-card-info">
             <li data-info-type="title">{{title}}</li>
             <li data-info-type="original-title">{{originalTitle}}</li>
