handle ajax returning an empty object

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
         <div id="results-display">
 
         </div>
+        <div id="error-display">
+          <p>We couldn't find what you're looking for. Please try a different search.</p>
+        </div>
       </div>
     </main>
 
