--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                 <i class="far fa-star"></i>
                 <i class="far fa-star"></i>
               </li>
+              <li data-info-type="genres">{{genres}}</li>
               <li data-info-type="cast"></li>
               <li data-info-type="overview">{{synopsis}}</li>
             </ul>
