--- a/index.html
+++ b/index.html
@@ -35,14 +35,13 @@
             <input class="searchbar" type="text" placeholder="Titles, people, genres">
           </div> -->
           <input class="searchbar" type="text" placeholder="Titles, people, genres">
+          <div class="searchbar-cross"><i class="fas fa-times"></i></div>
           <i class="fas fa-search"></i>
           <a href="#"><i class="fas fa-gift"></i></a>
           <a href="#"><i class="fas fa-bell"></i></a>
           <div class="header-right-imgbox">
             <img src="https://occ-0-728-784.1.nflxso.net/dnm/api/v6/Z-WHgqd_TeJxSuha8aZ5WpyLcX8/AAAABdIXX5D4Abs2Zsu_LkdbJgnZyJzTNMqV7pLsqmEt3wYDfy_sIf2HAThe9dliWIaeVRmOqVzZJzn8ReigmP2kpXU.png?r=318" alt="profile-icon">
           </div>
-          <!-- <input class="searchbar" type="text">
-          <button class="header-search-btn" type="button" name="button">Search</button> -->
         </div>
       </div>
     </header>
