empty searchbar value after search + minor fixes

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <i class="fas fa-search"></i>
             <input class="searchbar" type="text" placeholder="Titles, people, genres">
           </div> -->
-          <input class="searchbar" type="text" placeholder="Titles, people, genres">
+          <input class="searchbar" type="text" placeholder=" Movies, TV shows">
           <div class="searchbar-cross"><i class="fas fa-times"></i></div>
           <i class="fas fa-search"></i>
           <a href="#"><i class="fas fa-gift"></i></a>
