--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <i class="fas fa-search"></i>
             <input class="searchbar" type="text" placeholder="Titles, people, genres">
           </div> -->
+          <select class="page-select" name=""></select>
           <input class="searchbar" type="text" placeholder=" Movies, TV shows">
           <div class="searchbar-cross"><i class="fas fa-times"></i></div>
           <i class="fas fa-search"></i>
@@ -59,9 +60,7 @@
             <a href="#">Related Search 3</a>
           </div>
         </div>
-        <div id="results-display">
-
-        </div>
+        <div id="results-display"></div>
         <div id="error-display">
           <p>We couldn't find what you're looking for. Please try a different search.</p>
         </div>
@@ -99,6 +98,10 @@
 
       <script id="select-template" type="text/x-handlebars-template">
         <li data-dd-item="{{genreLow}}">{{genre}}</li>
+      </script>
+
+      <script id="pagination-template" type="text/x-handlebars-template">
+        <option value="{{pageNr}}">{{pageNr}}</option>
       </script>
   </body>
 </html>
