--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
 
     <!-- MAIN -->
     <main>
+      <div class="disclaimer">
+        <p class="disclaimer-title">DISCLAIMER</p>
+        <p class="disclaimer-body">This page was developed and uploaded for the sole purposes of practicing and demonstrating coding skills. The project is in no way affiliated with, endorsed by or acknowledged by Netflix.</p>
+        <p class="disclaimer-close">Close</p>
+      </div>
       <div class="container">
         <div class="results-display-header clearfix">
           <div class="results-display-header-left float-lx">
